# handlers/handler.go
@@ -213,35 +213,3 @@ func (handler *RecipesHandler) GetOneRecipeHandler(c *gin.Context) {
 
 	c.JSON(http.StatusOK, recipe)
 }
-
-// swagger:operation GET /recipes/search recipes findRecipe
-// Search recipes based on tags
-// ---
-// produces:
-// - application/json
-// parameters:
-//   - name: tag
-//     in: query
-//     description: recipe tag
-//     required: true
-//     type: string
-// responses:
-//     '200':
-//         description: Successful operation
-//func SearchRecipesHandler(c *gin.Context) {
-//	tag := c.Query("tag")
-//	listOfRecipes := make([]Recipe, 0)
-//	for i := 0; i < len(recipes); i++ {
-//		found := false
-//		for _, t := range recipes[i].Tags {
-//			if strings.EqualFold(t, tag) {
-//				found = true
-//			}
-//		}
-//		if found {
-//			listOfRecipes = append(listOfRecipes,
-//				recipes[i])
-//		}
-//	}
-//	c.JSON(http.StatusOK, listOfRecipes)
-//}
